--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -27,9 +27,9 @@ jobs:
 
       - name: Setup Deno
         # uses: denoland/setup-deno@v2
-        - uses: denoland/setup-deno@v2
-          with:
-            deno-version: vx.x.x
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: vx.x.x
 
       # Uncomment this step to verify the use of 'deno fmt' on each commit.
       - name: Verify formatting
